# space-kill

./: CMakeLists.txt  Enemy.cpp  Enemy.hpp  Entities.hpp  Game_Model.cpp  Game_Model.hpp  Game_View.cpp  Game_View.hpp  Player.cpp  Player.hpp  README.md  Ship.cpp  Ship.hpp  Shot.cpp  Shot.hpp  main.cpp
assets/: license_ships.txt
